--- a/skins_adm/bootstrap/rsc/css/style.css
+++ b/skins_adm/bootstrap/rsc/css/style.css
@@ -1026,7 +1026,6 @@ ul.widget_container li:hover {
 }
 ul.widget_container li > span,
 ul.widget_container li > a {
-  display: inline-block;
   padding: 3px 10px;
   margin: 0;
   border-color: #ddd;
